<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/itemOrcamentoCasa"
        android:orderInCategory="100"
        android:title="@string/tela_inicial2"
        android:icon="@drawable/ic_home_white_48dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemOrcamentoEnviarOrcamento"
        android:orderInCategory="120"
        android:title="@string/enviar_orcamento"
        android:icon="@drawable/ic_action_email"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemOrcamentoNovoOrcamento"
        android:orderInCategory="130"
        android:title="@string/novo_orcamento"
        android:icon="@drawable/ic_novo_orcamento"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemOrcamentoEditarcliente"
        android:orderInCategory="140"
        android:title="@string/editar_cliente"
        app:showAsAction="never"  />
    <item
        android:id="@+id/itemOrcamentoEditarMaterial"
        android:orderInCategory="150"
        android:title="@string/editar_calha"
        app:showAsAction="never"  />



</menu>