<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvApelido"
            android:text="@string/cliente"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:textColor="@color/black"
            android:textSize="@dimen/dialogClienteUpdateHeaderS" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_nome"
            android:textSize="@dimen/dialogClienteUpdateS" />

        <TextView
            android:id="@+id/tvFone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_fone"
            android:textSize="@dimen/dialogClienteUpdateS" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_email"
            android:textSize="@dimen/dialogClienteUpdateS" />

        <TextView
            android:id="@+id/tvRua"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_rua"
            android:textSize="@dimen/dialogClienteUpdateS" />

        <TextView
            android:id="@+id/tvBairro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_bairro"
            android:textSize="@dimen/dialogClienteUpdateS" />

        <TextView
            android:id="@+id/tvCidade"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formItemHeightS"
            android:gravity="center_vertical|start"
            android:hint="@string/sem_cidade"
            android:textSize="@dimen/dialogClienteUpdateS" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btDialogClienteUpdateCancel"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/btDialogClienteUpdateSave"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>