<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/novo_cliente"
        android:orderInCategory="200"
        android:title="@string/novo_cliente"
        android:icon="@drawable/ic_action_novo_cliente"
        app:showAsAction="always" />
    <item
        android:id="@+id/novo_cliente2"
        android:orderInCategory="110"
        android:title="@string/novo_cliente"
        app:showAsAction="never"  />
    <item
        android:id="@+id/novo_orcamento"
        android:orderInCategory="100"
        android:title="@string/novo_orcamento"
        android:icon="@drawable/ic_novo_orcamento"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/novo_orcamento2"
        android:orderInCategory="120"
        android:title="@string/novo_orcamento"

        />

    <item
        android:id="@+id/editar_calha"
        android:orderInCategory="300"
        android:title="@string/editar_calha"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"

        app:actionViewClass="android.support.v7.widget.SearchView"/>

</menu>

    <!-- app:showAsAction="ifRoom|collapseActionView" -->
